WIP: Remove jquery datetimepicker on checkout

--- a/catalog/view/theme/helium/template/account/return_form.twig
+++ b/catalog/view/theme/helium/template/account/return_form.twig
@@ -169,9 +169,9 @@
     {{ column_right }}</div>
 </div>
 <script type="text/javascript"><!--
-$('.date').datetimepicker({
-	language: '{{ datepicker }}',
-	pickTime: false
-});
+// $('.date').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickTime: false
+// });
 //--></script> 
 {{ footer }} 
