--- a/catalog/view/theme/helium/template/affiliate/register.twig
+++ b/catalog/view/theme/helium/template/affiliate/register.twig
@@ -684,21 +684,21 @@ $('button[id^=\'button-custom-field\']').on('click', function() {
 });
 //--></script> 
 <script type="text/javascript"><!--
-$('.date').datetimepicker({
-	language: '{{ datepicker }}',
-	pickTime: false
-});
+// $('.date').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickTime: false
+// });
 
-$('.time').datetimepicker({
-	language: '{{ datepicker }}',
-	pickDate: false
-});
+// $('.time').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickDate: false
+// });
 
-$('.datetime').datetimepicker({
-	language: '{{ datepicker }}',
-	pickDate: true,
-	pickTime: true
-});
+// $('.datetime').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickDate: true,
+// 	pickTime: true
+// });
 //--></script>
 <script type="text/javascript"><!--
 $('input[name=\'payment\']').on('change', function() {
