--- a/catalog/view/theme/helium/template/checkout/shipping_address.twig
+++ b/catalog/view/theme/helium/template/checkout/shipping_address.twig
@@ -287,21 +287,21 @@ $('#collapse-shipping-address button[id^=\'button-shipping-custom-field\']').on(
 });
 //--></script>
 <script type="text/javascript"><!--
-$('.date').datetimepicker({
-	language: '{{ datepicker }}',
-	pickTime: false
-});
+// $('.date').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickTime: false
+// });
 
-$('.time').datetimepicker({
-	language: '{{ datepicker }}',
-	pickDate: false
-});
+// $('.time').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickDate: false
+// });
 
-$('.datetime').datetimepicker({
-	language: '{{ datepicker }}',
-	pickDate: true,
-	pickTime: true
-});
+// $('.datetime').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickDate: true,
+// 	pickTime: true
+// });
 //--></script>
 <script type="text/javascript"><!--
 $('#collapse-shipping-address select[name=\'country_id\']').on('change', function() {
