--- a/catalog/view/theme/helium/template/account/affiliate.twig
+++ b/catalog/view/theme/helium/template/account/affiliate.twig
@@ -391,20 +391,20 @@ $('button[id^=\'button-custom-field\']').on('click', function() {
 });
 //--></script>
 <script type="text/javascript"><!--
-$('.date').datetimepicker({
-	language: '{{ datepicker }}',
-	pickTime: false
-});
+// $('.date').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickTime: false
+// });
 
-$('.datetime').datetimepicker({
-	language: '{{ datepicker }}',
-	pickDate: true,
-	pickTime: true
-});
+// $('.datetime').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickDate: true,
+// 	pickTime: true
+// });
 
-$('.time').datetimepicker({
-	language: '{{ datepicker }}',
-	pickDate: false
-});
+// $('.time').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickDate: false
+// });
 //--></script>
 {{ footer }}
