--- a/catalog/view/theme/helium/template/checkout/payment_address.twig
+++ b/catalog/view/theme/helium/template/checkout/payment_address.twig
@@ -288,21 +288,21 @@ $('#collapse-payment-address button[id^=\'button-payment-custom-field\']').on('c
 });
 //--></script>
 <script type="text/javascript"><!--
-$('.date').datetimepicker({
-	language: '{{ datepicker }}',
-	pickTime: false
-});
+// $('.date').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickTime: false
+// });
 
-$('.time').datetimepicker({
-	language: '{{ datepicker }}',
-	pickDate: false
-});
+// $('.time').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickDate: false
+// });
 
-$('.datetime').datetimepicker({
-	language: '{{ datepicker }}',
-	pickDate: true,
-	pickTime: true
-});
+// $('.datetime').datetimepicker({
+// 	language: '{{ datepicker }}',
+// 	pickDate: true,
+// 	pickTime: true
+// });
 //--></script>
 <script type="text/javascript"><!--
 $('#collapse-payment-address select[name=\'country_id\']').on('change', function() {
