--- a/catalog/view/theme/helium/template/common/success.twig
+++ b/catalog/view/theme/helium/template/common/success.twig
@@ -1,25 +1,20 @@
 {{ header }}
-<div id="common-success" class="container">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
+{% include 'helium/template/common/breadcrumbs.twig' %}
+<main id="common-success">
+  <div class="row">
+    {{ content_top }}
+    <div>
       <h1>{{ heading_title }}</h1>
       {{ text_message }}
       <div class="buttons">
-        <div class="pull-right"><a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a></div>
+        <div class="pull-right">
+          <a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a>
+        </div>
       </div>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
-</div>
+    </div>
+  </div>
+</main>
+{{ column_left }}
+{{ column_right }}
+{{ content_bottom }}
 {{ footer }}
