--- a/catalog/view/theme/helium/template/extension/payment/cod.twig
+++ b/catalog/view/theme/helium/template/extension/payment/cod.twig
@@ -9,10 +9,10 @@ $('#button-confirm').on('click', function() {
 		url: 'index.php?route=extension/payment/cod/confirm',
 		dataType: 'json',
 		beforeSend: function() {
-			$('#button-confirm').button('loading');
+			// $('#button-confirm').button('loading');
 		},
 		complete: function() {
-			$('#button-confirm').button('reset');
+			// $('#button-confirm').button('reset');
 		},
 		success: function(json) {
 			if (json['redirect']) {
