--- a/catalog/view/theme/helium/template/common/success.twig
+++ b/catalog/view/theme/helium/template/common/success.twig
@@ -6,10 +6,8 @@
     <div>
       <h1>{{ heading_title }}</h1>
       {{ text_message }}
-      <div class="buttons">
-        <div class="pull-right">
-          <a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a>
-        </div>
+      <div class="row">
+        <a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a>
       </div>
     </div>
   </div>
